jca updates
git-svn-id: svn://svn.caucho.com/resin/trunk@3536 9c94448d-38f1-0310-a231-d98308ff1ebf